Fix invisible button icon spacing

--- a/src/components/Button/Button.less
+++ b/src/components/Button/Button.less
@@ -201,7 +201,6 @@
 
 		.@{prefix}-Icon {
 			stroke: @color-primary;
-			margin-right: 0.25em;
 		}
 	}
 
